Fixed Navigation Bar Overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,12 +25,6 @@ h1 {
 	margin-top: 20px;
 }
 
-.container {
-	margin-top: 20px;
-	margin-bottom: 90px;
-
-}
-
 .center
 {
 margin-left:auto;
